--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -2,28 +2,23 @@ body {
   background: #fafafa;
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #333;
+  margin: 0;
+}
+#mainContainer{
+    height: 100vh;
+    width: 100%;
+    background-color: #000;
+    margin: 0;
+    padding: 0;
+}
+#header{
+    height: 15%;
+    width: 100%;
+    background-color: #F00;
 }
 
-.hero-unit {
-  margin: 50px auto 0 auto;
-  width: 300px;
-  font-size: 18px;
-  font-weight: 200;
-  line-height: 30px;
-  background-color: #eee;
-  border-radius: 6px;
-  padding: 60px;
-}
-
-.hero-unit h1 {
-  font-size: 60px;
-  line-height: 1;
-  letter-spacing: -1px;
-}
-
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+#contentContainer{
+    height: 85%;
+    width: 100%;
+    background-color: #0F0;
 }
